--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,8 +26,7 @@
     -->
     <title>Airline Title</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body id = "root">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
