--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>Airline Title</title>
   </head>
-  <body id = "root">
+  <body>
+    <div id = "root"></div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
