--- a/backend/mailbody/ticketConfirmation.html
+++ b/backend/mailbody/ticketConfirmation.html
@@ -45,11 +45,11 @@
                 
             </div>
             <div
-            style="background-color: #5f7ec1;">
+            style="background-color: #9daac6;">
                 <h2 style="
                     font-size: 1.25rem;
                     font-family: 'fantasy';
-                    font-weight: 600;">Ticket Confirmation</h2>
+                    font-weight:800;">Ticket Confirmation</h2>
                 <div style="
                         text-align: left;
                         padding-left: 30px;
@@ -68,33 +68,30 @@
                         </p>
                         <div style="padding-left: 30px;">
                             <p>
-                                Booking ID: {{bookingId}}
+                                <span style="font-weight: 600;">Booking ID:</span> {{bookingId}}
                             </p>
                             <p>
-                                Flight ID: {{flightId}}
+                                <span style="font-weight: 600;">Flight ID:</span> {{flightId}}
                             </p>
                             <p>
-                                Departure: {{departure}}
+                                <span style="font-weight: 600;">Departure:</span> {{departure}}
                             </p>
                             <p>
-                                Arrival: {{arrival}}
+                                <span style="font-weight: 600;">Arrival:</span> {{arrival}}
                             </p>
                             <p>
-                                Date: {{date}}
+                                <span style="font-weight: 600;">Date:</span> {{date}}
                             </p>
                             <p>
-                                Time: {{time}}
+                                <span style="font-weight: 600;">Time:</span> {{time}}
                             </p>
                             <p>
-                                Number of Passengers: {{passengers}}
+                                <span style="font-weight: 600;">Number of Passengers:</span> {{passengers}}
                             </p>
                             <p>
-                                Total Cost: {{cost}}
+                                <span style="font-weight: 600;">Total Cost:</span> {{cost}}
                             </p>
                         </div>
-                        <p>
-                            Please check your email for the ticket.
-                        </p>
                         <p>
                             Thank you for choosing Cloud9 Airlines.
                         </p>
